@@ -1,8 +1,6 @@
 SportsTracker-TODO
 ==================
 
-- Overview Dialog: Use Spinner control => will be introduced in Java 8u40 (Dec. 2014)
-
 JavaFX Migration:
 - remove the openjfx-dialog dependency when Java 8u40 has been released and when Java 8u40 is
   available on the Travis CI build systems
